--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -44,7 +44,4 @@
   <% end %>
   </tbody>
 </table>
-<br>
-<div class="btn-group">
-  <%= link_to 'Nieuw bier', new_beer_path, :class => "btn btn-primary" %>
-</div>
+<%= link_to 'Nieuw bier', new_beer_path, :class => "btn btn-block btn-primary" %>
