--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Nieuw Bier</h1>
+<h1>Bier toevoegen</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Terug', beers_path, :class => "btn" %>
+<%= link_to 'Terug', beers_path, :class => "btn btn-default" %>
