--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Laat zien', @event, class: "btn btn-default" %>
-<%= link_to 'Terug', events_path, class: "btn btn-default" %>
+<div class="btn-group">
+    <%= link_to 'Laat zien', @event, class: "btn btn-default" %>
+    <%= link_to 'Terug', events_path, class: "btn btn-default" %>
+</div>
