--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form' %>
 
 <div class="btn-group">
-  <%= link_to 'Terug', events_path, :class => "btn" %>
+  <%= link_to 'Terug', events_path, :class => "btn btn-default" %>
 </div>
