--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -25,6 +25,6 @@
       <%= f.text_area :content, placeholder: "Huilie huilie in dit veld.", class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.submit :Verstuur, class: "btn btn-default" %>
+      <%= f.submit :Verstuur, class: "btn btn-primary" %>
     </div>
 <% end %>
