--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -28,6 +28,6 @@
       <%= f.text_area :body, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.submit :"Posten dan maar", class: "btn btn-default" %>
+      <%= f.submit :"Posten dan maar", class: "btn btn-primary" %>
     </div>
 <% end %>
