--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,9 +5,6 @@
     <th>Activiteit</th>
     <th>Datum</th>
     <th>Aanwezig</th>
-    <% if current_user.admin? %>
-        <th></th>
-    <% end %>
     <th></th>
   </tr>
   </thead>
@@ -20,23 +17,25 @@
       <tr class = "<%= c %>">
         <td><%= link_to event.title, event %></td>
         <td><%= event.date.strftime("%d/%m/%Y") %>
-        <td><% event.signups.where(status: true).each_with_index do |s, index| %><%= "," if index != 0 %> <%= s.user.name %><% end %><% if event.signups.where(status: true, user_id: current_user.id).empty? %>, ..jij?<% end %>
+        <td>
+          <% event.signups.where(status: true).each_with_index do |s, index| %><%= "," if index != 0 %>
+              <%= s.user.name %><% end %><% if event.signups.where(status: true, user_id: current_user.id).empty? %>, ..jij?
+          <% end %>
         </td>
-        <% if current_user == event.user or current_user.admin? or current_user.schrijf_feut? %>
-            <td><%= link_to 'Wijzig', edit_event_path(event), :class => "btn btn-info" %></td>
-        <% else %>
-            <td></td>
-        <% end %>
-        <% if current_user.admin? %>
-            <td><%= link_to 'Verwijder', event, method: :delete, data: { confirm: 'Weet je het zeker?' }, :class => "btn btn-danger" %></td>
-        <% end %>
+        <td>
+          <div class="btn-group">
+            <% if current_user == event.user or current_user.admin? or current_user.schrijf_feut? %>
+                <%= link_to 'Wijzig', edit_event_path(event), :class => "btn btn-info" %>
+            <% end %>
+            <% if current_user.admin? %>
+                <%= link_to 'Verwijder', event, method: :delete, data: { confirm: 'Weet je het zeker?' }, :class => "btn btn-danger" %>
+            <% end %>
+          </div>
       </tr>
   <% end %>
   </tbody>
 </table>
 <%= will_paginate %>
 <% if lid? %>
-    <div class="btn-group">
-      <%= link_to 'Nieuwe activiteit', new_event_path, :class => "btn btn-primary" %>
-    </div>
+    <%= link_to 'Nieuwe activiteit', new_event_path, class: "btn btn-block btn-primary" %>
 <% end %>
