--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @meeting %> |
-<%= link_to 'Back', meetings_path %>
+<div class="btn-group">
+    <%= link_to 'Show', @meeting, class: "btn btn-default" %>
+    <%= link_to 'Back', meetings_path, class: "btn btn-default" %>
+</div>
