--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New meeting</h1>
+<h1>Nieuwe vergadering</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', meetings_path %>
+<%= link_to 'Back', meetings_path, class: "btn btn-default" %>
