--- a/app/views/shared/_news_item.html.erb
+++ b/app/views/shared/_news_item.html.erb
@@ -1,7 +1,9 @@
 <ul class="timeline">
   <%= link_to new_news_path do %>
       <li>
-        <div class="timeline-badge"><i class="glyphicon glyphicon-plus"></i></div>
+        <div class="timeline-badge">
+          <i class="glyphicon glyphicon-plus"></i>
+        </div>
       </li>
   <% end %>
   <br /><br />
@@ -21,9 +23,16 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title"><%= n.title %></h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <%= time_ago_in_words(n.created_at) %> ago. (<%= n.created_at.strftime("%-d/%-m/%y %H:%M") %>)<% if current_user.admin? %> | <%= link_to "edit", edit_news_path(n) %> | <%= link_to "delete", n, method: :delete,
-                                                                                                                                                                                                                                                                    data: { confirm: "Weet je het zeker?" },
-                                                                                                                                                                                                                                                                    title: n.title %> <% end %></small></p>
+          <p>
+            <small class="text-muted">
+              <i class="glyphicon glyphicon-time"></i>
+              <%= time_ago_in_words(n.created_at) %> ago. (<%= n.created_at.strftime("%-d/%-m/%y %H:%M") %>)
+              <% if current_user.admin? %> | <%= link_to "edit", edit_news_path(n) %> | <%= link_to "delete", n, method: :delete,
+                                                                                                    data: { confirm: "Weet je het zeker?" },
+                                                                                                    title: n.title %>
+              <% end %>
+            </small>
+          </p>
         </div>
         <div class="timeline-body">
           <p><%= n.body %></p>
