--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,6 +10,9 @@
               <%= render 'shared/random_biertje' %>
             </section>
             <section>
+              <%= render 'shared/random_quote' %>
+            </section>
+            <section>
               <%= render 'shared/quote_form' %>
             </section>
             <% if current_user.lid? %>
