--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <title>Hamers zonder Sikkel</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
   <% if signed_in? %>
   <% if current_user.in_group?(Usergroup.find_by(name: 'kutfeut')) %>
   <script src="/kutfeut/kutfeut.js"></script>
