--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,7 @@
                   <li><%= link_to "Nieuws", news_index_path %></li>
                   <li><%= link_to "Bier", beers_path %></li>
                   <li><%= link_to "Statistieken", stats_path %></li>
+		  <li><%= link_to "Bijnamen", nicknames_path %></li>
                 </ul>
               </li>
               <% if current_user.admin? %>
