--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -11,5 +11,6 @@
       <%= link_to "Verwijder", feed_item, method: :delete,
                   data: { confirm: "Weet je het zeker?" },
                   title: feed_item.text %>
+      <%= link_to "Edit", edit_quote_path(feed_item) %>
   <% end %>
 </li>
