mailadres toegevoegd aan homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,5 +35,6 @@
     <div class="center hero-unit">
       <h1>Hamers zonder Sikkel</h1>
       <h2>defenestraties voorbehouden</h2>
+      <b>Email: hamers@zondersikkel.nl</b>
     </div>
 <% end %>
