--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,7 +1,7 @@
 <li id="<%= feed_item.id %>">
   <%= link_to gravatar_for(feed_item.user), feed_item.user %>
   <span class="user">
-   <%= link_to feed_item.user.name, feed_item.user %>
+   <%= link_to feed_item.user.name_with_nickname, feed_item.user %>
    </span>
   <span class="content"><%= feed_item.text %></span>
    <span class="timestamp">
