Code styling + a-element coloring

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,20 +1,26 @@
+/* Custom CSS */
+a:hover {
+    color: #000;
+    background-color: #fff;
+}
+
 /* tables */
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-	background-color: #e6EEEE;
+    background-color: #e6EEEE;
 }
+
 table.tablesorter thead tr .header {
-	cursor: pointer;
+    cursor: pointer;
 }
+
 table.tablesorter tbody tr.odd td {
-	background-color:#F0F0F6;
+    background-color: #F0F0F6;
 }
+
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-  background-color: #8dbdd8;
+    background-color: #8dbdd8;
 }
+
 table.events thead tr th, table.tablesorter tfoot tr th {
-	background-color: #e6EEEE;
+    background-color: #e6EEEE;
 }
-
-/* Bootstrap override */
-@media(max-width: 979px) {
-
