--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,8 @@
           <% end %>
           <% if signed_in? %>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Voor Leden  <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Voor
+                  Leden <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Leden", users_path %></li>
                   <li><%= link_to "Activiteiten", events_path %></li>
@@ -29,12 +30,13 @@
                   <li><%= link_to "Nieuws", news_index_path %></li>
                   <li><%= link_to "Bier", beers_path %></li>
                   <li><%= link_to "Statistieken", stats_path %></li>
-		  <li><%= link_to "Bijnamen", nicknames_path %></li>
+                  <li><%= link_to "Bijnamen", nicknames_path %></li>
                 </ul>
               </li>
               <% if current_user.admin? %>
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Triumviraat <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Triumviraat
+                      <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><%= link_to "Push", new_push_path %></li>
                       <li><%= link_to "Groepen", groups_path %></li>
@@ -45,7 +47,8 @@
                   </li>
               <% end %>
               <li id="fat-menu" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account
+                  <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Mijn Profiel", current_user %></li>
                   <li><%= link_to "Instellingen", edit_user_path(current_user) %></li>
