--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -8,9 +8,13 @@
    Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
    </span>
   <% if current_user.admin? %>
-      <%= link_to "Verwijder", feed_item, method: :delete,
-                  data: { confirm: "Weet je het zeker?" },
-                  title: feed_item.text %>
-      <%= link_to "Edit", edit_quote_path(feed_item) %>
+      <div class="btn-group">
+        <%= link_to '<i class="fa fa-pencil"></i>'.html_safe, edit_quote_path(feed_item),
+                    class: 'btn btn-default' %>
+        <%= link_to '<i class="fa fa-trash"></i>'.html_safe, feed_item, method: :delete,
+                    data: {confirm: 'Weet je het zeker?'},
+                    title: feed_item.text,
+                    class: 'btn btn-default' %>
+      </div>
   <% end %>
 </li>
