--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
             <section>
               <%= render 'shared/random_quote' %>
             </section>
-            <section>
+            <section style="overflow: visible;">
               <%= render 'shared/quote_form' %>
             </section>
             <% if current_user.lid? %>
