--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,12 +1,5 @@
-<script type="text/javascript">
-    $(document).ready(function()
-            {
-                $("#bier").tablesorter();
-            }
-    );
-</script>
 <h1>Biertjes</h1>
-<table id="bier" class="tablesorter table tablehover">
+<table id="bier" class="tablesorter table table-hover">
   <thead>
   <tr>
     <th>Naam</th>
@@ -21,14 +14,14 @@
   </thead>
   <tbody>
   <% @beers.each do |beer| %>
-      <% if beer.reviews.where("user_id = ?", current_user.id).empty? %>
-          <tr bgcolor="FCF8E3">
-      <% elsif beer.reviews.where("user_id = ?", current_user.id).take.rating > 6 %>
-          <tr bgcolor="DFF0D8">
-      <% elsif beer.reviews.where("user_id = ?", current_user.id).take.rating > 4 %>
-          <tr bgcolor="89c4f4">
+      <% if beer.reviews.where('user_id = ?', current_user.id).empty? %>
+          <tr class="default">
+      <% elsif beer.reviews.where('user_id = ?', current_user.id).take.rating > 6 %>
+          <tr class="success">
+      <% elsif beer.reviews.where('user_id = ?', current_user.id).take.rating > 4 %>
+          <tr class="info">
       <% else %>
-          <tr bgcolor="F2DEDE">
+          <tr class="danger">
       <% end %>
       <td><%= link_to beer.name, beer %></td>
       <td><%= beer.soort %></td>
@@ -37,11 +30,11 @@
       <td><%= beer.reviews.count %></td>
       <% if current_user.admin? %>
           <td>
-            <%= link_to 'Verwijder', beer, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'Verwijder', beer, class: 'btn btn-danger', method: :delete, data: {confirm: 'Are you sure?'} %>
           </td>
       <% end %>
       </tr>
   <% end %>
   </tbody>
 </table>
-<%= link_to 'Nieuw bier', new_beer_path, :class => "btn btn-block btn-primary" %>
+<%= link_to 'Nieuw bier', new_beer_path, :class => 'btn btn-block btn-primary' %>
