--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "HAMERS", root_path, class: "navbar-brand", id: "logo" %>
+        <%= link_to 'HAMERS', root_path, class: 'navbar-brand', id: "logo" %>
       </div>
       <div class="collapse navbar-collapse" id="navigationbar">
         <ul class="nav navbar-nav navbar-right">
@@ -23,14 +23,14 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Voor
                   Leden <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Leden", users_path %></li>
-                  <li><%= link_to "Activiteiten", events_path %></li>
-                  <li><%= link_to "Vergaderingen", meetings_path %></li>
-                  <li><%= link_to "Motie", new_motion_path %></li>
-                  <li><%= link_to "Nieuws", news_index_path %></li>
-                  <li><%= link_to "Bier", beers_path %></li>
-                  <li><%= link_to "Statistieken", stats_path %></li>
-                  <li><%= link_to "Bijnamen", nicknames_path %></li>
+                  <li><%= link_to 'Leden', users_path %></li>
+                  <li><%= link_to 'Activiteiten', events_path %></li>
+                  <li><%= link_to 'Vergaderingen', meetings_path %></li>
+                  <li><%= link_to 'Motie', new_motion_path %></li>
+                  <li><%= link_to 'Nieuws', news_index_path %></li>
+                  <li><%= link_to 'Bier', beers_path %></li>
+                  <li><%= link_to 'Statistieken', stats_path %></li>
+                  <li><%= link_to 'Bijnamen', nicknames_path %></li>
                 </ul>
               </li>
               <% if current_user.admin? %>
@@ -38,11 +38,11 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Triumviraat
                       <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><%= link_to "Push", new_push_path %></li>
-                      <li><%= link_to "Groepen", groups_path %></li>
-                      <li><%= link_to "Moties", motions_path %></li>
-                      <li><%= link_to "Openbare Paginas", public_pages_path %></li>
-                      <li><%= link_to "Download DB", dbdump_path %></li>
+                      <li><%= link_to 'Push', new_push_path %></li>
+                      <li><%= link_to 'Groepen', groups_path %></li>
+                      <li><%= link_to 'Moties', motions_path %></li>
+                      <li><%= link_to 'Openbare Paginas', public_pages_path %></li>
+                      <li><%= link_to 'Download DB', dbdump_path %></li>
                     </ul>
                   </li>
               <% end %>
@@ -50,11 +50,11 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Mijn Profiel", current_user %></li>
-                  <li><%= link_to "Instellingen", edit_user_path(current_user) %></li>
+                  <li><%= link_to 'Mijn Profiel', current_user %></li>
+                  <li><%= link_to 'Instellingen', edit_user_path(current_user) %></li>
                   <li class="divider"></li>
                   <li>
-                    <%= link_to "Uitloggen", signout_path, method: "delete" %>
+                    <%= link_to 'Uitloggen', signout_path, method: 'delete' %>
                   </li>
           <% end %>
           </ul>
