--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if object.errors.any? %>
     <div id="error_explanation">
       <div class="alert alert-error">
-        The form contains <%= pluralize(object.errors.count, "error") %>.
+        The form contains <%= pluralize(object.errors.count, 'error') %>.
       </div>
       <ul>
         <% object.errors.full_messages.each do |msg| %>
