--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -2,19 +2,26 @@
   <%= link_to gravatar_for(feed_item.user), feed_item.user %>
   <span class="user">
    <%= link_to feed_item.user.name_with_nickname, feed_item.user %>
-   </span>
-  <span class="content"><%= feed_item.text %></span>
-   <span class="timestamp">
+  </span>
+  <span class="content">
+    <%= feed_item.text %>
+  </span>
+  <span class="timestamp">
    Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
-   </span>
+  </span>
   <% if current_user.admin? %>
       <div class="btn-group">
-        <%= link_to '<i class="fa fa-pencil"></i>'.html_safe, edit_quote_path(feed_item),
-                    class: 'btn btn-default' %>
-        <%= link_to '<i class="fa fa-trash"></i>'.html_safe, feed_item, method: :delete,
+        <%= link_to edit_quote_path(feed_item),
+                    class: 'btn btn-default' do %>
+            <i class="fa fa-pencil"></i>
+        <% end %>
+        <%= link_to feed_item,
+                    method: :delete,
                     data: {confirm: 'Weet je het zeker?'},
                     title: feed_item.text,
-                    class: 'btn btn-default' %>
+                    class: 'btn btn-default btn-sm' do %>
+            <i class="fa fa-trash"></i>
+        <% end %>
       </div>
   <% end %>
 </li>
