--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -12,7 +12,7 @@
   <% if current_user.admin? %>
       <div class="btn-group">
         <%= link_to edit_quote_path(feed_item),
-                    class: 'btn btn-default' do %>
+                    class: 'btn btn-default btn-sm' do %>
             <i class="fa fa-pencil"></i>
         <% end %>
         <%= link_to feed_item,
