--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -5,7 +5,7 @@
     </div>
       <div class="form-group btn-group bootstrap-select dropdown">
         <% users_array = User.all.map { |user| [user.name, user.id] } %>
-        <%= f.select :user_id, options_for_select(users_array), {form_tag_html: data-width='auto'}, class: 'form-control selectpicker' %>
+        <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker' %>
       </div>
     <%= f.submit 'Post', class: 'btn btn-large btn-primary' %>
 <% end %>
