--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -32,7 +32,7 @@
       </div>
     </div>
 <% else %>
-    <div class="center hero-unit">
+    <div class="center jumbotron">
       <h1>Hamers zonder Sikkel</h1>
       <h2>defenestraties voorbehouden</h2>
       <b>Email: hamers@zondersikkel.nl</b>
