--- a/app/views/nicknames/index.html.erb
+++ b/app/views/nicknames/index.html.erb
@@ -1,5 +1,4 @@
 <h1> Nicknames </h1>
-<%= link_to "Bijnaam toevoegen", new_nickname_path, class: "btn btn-info" %>
 <table class="table table-hover">
   <thead>
   <tr>
@@ -8,8 +7,8 @@
     <th>Beschrijving</th>
     <th>Aanmaakdatum</th>
     <% if current_user.admin? %>
-	<th> Admin </th>
-    <%end%>
+        <th> Admin</th>
+    <% end %>
   </tr>
   </thead>
   <tbody>
@@ -18,15 +17,22 @@
         <td><%= nickname.user.name %></td>
         <td><%= nickname.nickname %>
         <td><%= nickname.description %> </td>
-        <td><%= nickname.created_at %> </td>
+        <td><%= nickname.created_at.strftime('%d-%m-%Y') %> </td>
         <% if current_user.admin? %>
-          <td> 
-            <%= link_to "Wijzig", edit_nickname_path(nickname), class: "btn btn-info" %>
-            <%= link_to "Verwijder", nickname, class: "btn btn-danger", method: :delete,
-                              data: { confirm: "Weet je het zeker?" } %>
-          </td>
-        <% end %> 
+            <td>
+              <div class="btn-group">
+                <%= link_to edit_nickname_path(nickname), class: 'btn btn-info' do %>
+                    <i class="fa fa-pencil"></i>
+                <% end %>
+                <%= link_to nickname, class: 'btn btn-danger', method: :delete,
+                            data: {confirm: 'Weet je het zeker?'} do %>
+                    <i class="fa fa-trash"></i>
+                <% end %>
+              </div>
+            </td>
+        <% end %>
       </tr>
   <% end %>
   </tbody>
 </table>
+<%= link_to 'Bijnaam toevoegen', new_nickname_path, class: 'btn btn-primary btn-block' %>
