--- a/app/views/beers/edit.html.erb
+++ b/app/views/beers/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'form' %>
 
 <div class="btn-group">
-    <%= link_to 'Show', @beer, class: "btn btn-default" %>
-    <%= link_to 'Terug', beers_path, class: "btn btn-default" %>
+    <%= link_to 'Show', @beer, class: 'btn btn-default' %>
+    <%= link_to 'Terug', beers_path, class: 'btn btn-default' %>
 </div>
